add ipv6 templates and added molecule tests

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ipv6-dhcp-relay.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ipv6-dhcp-relay.cfg
@@ -1,5 +1,10 @@
 !RANCID-CONTENT-TYPE: arista
 !
+ipv6 dhcp relay always-on
+ipv6 dhcp relay all-subnets default
+ipv6 dhcp relay option link-layer address
+ipv6 dhcp relay option remote-id format %m:%i
+!
 transceiver qsfp default-mode 4x10G
 !
 hostname ipv6-dhcp-relay
