--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vlan-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vlan-interfaces.cfg
@@ -225,6 +225,16 @@ interface Vlan336
    ipv6 enable
    ipv6 address 2a00:3::1/64
 !
+interface Vlan337
+   description v4 dhcp relay all-subnets
+   ip address 16.0.2.2/25
+   ip dhcp relay all-subnets
+!
+interface Vlan338
+   description v6 dhcp relay all-subnets
+   ipv6 dhcp relay all-subnets
+   ipv6 address 2a00:1::1/64
+!
 interface Vlan501
    description SVI Description
    no shutdown
