change molecule driver back to default

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/molecule.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/molecule.yml
@@ -14,7 +14,7 @@ dependency:
   name: galaxy
   enabled: false
 driver:
-  name: delegated
+  name: default
   options:
     managed: false
 platforms:
