--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ptp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ptp.yml
@@ -46,6 +46,7 @@ port_channel_interfaces:
     mlag: 5
     ptp:
       enable: true
+      mpass: true
       delay_mechanism: e2e
       sync_message:
         interval: 1
