--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-leaf2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/ptp-tests-leaf2.cfg
@@ -54,6 +54,21 @@ vrf instance MGMT
 !
 vrf instance VRF1
 !
+interface Port-Channel6
+   description Endpoint-with-mpass
+   no shutdown
+   switchport
+   switchport access vlan 11
+   mlag 6
+   ptp enable
+   ptp mpass
+   ptp announce interval 0
+   ptp announce timeout 3
+   ptp delay-req interval -3
+   ptp sync-message interval -3
+   ptp role master
+   ptp transport ipv4
+!
 interface Port-Channel9
    description MLAG_PEER_ptp-tests-leaf1_Po9
    no shutdown
@@ -138,6 +153,11 @@ interface Ethernet5
    ptp delay-req interval -3
    ptp role master
    spanning-tree portfast
+!
+interface Ethernet6
+   description Endpoint-with-mpass_PCI2
+   no shutdown
+   channel-group 6 mode active
 !
 interface Ethernet9
    description MLAG_PEER_ptp-tests-leaf1_Ethernet9
