--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -17,16 +17,26 @@ event-handler CONFIG_VERSIONING
    action bash FN=/mnt/flash/startup-config; LFN="`ls -1 $FN.*-* | tail -n 1`"; if [ -z "$LFN" -o -n "`diff -I 'last modified' $FN $LFN`" ]; then cp $FN $FN.`date +%Y%m%d-%H%M%S`; ls -1r $FN.*-* | tail -n +11 | xargs -I % rm %; fi
    delay 0
 !
-event-handler evpn-blacklist-recovery
-   trigger on-logging
-      regex EVPN-3-BLACKLISTED_DUPLICATE_MAC
-   action bash FastCli -p 15 -c "clear bgp evpn host-flap"
-   delay 300
-   asynchronous
-!
 event-handler trigger-on-boot
    trigger on-boot
    action bash echo "on-boot"
+!
+event-handler trigger-on-counters
+   trigger on-counters
+      poll interval 10
+      condition ( Arad*.IptCrcErrCnt.delta > 100 ) and ( Arad*.UcFifoFullDrop.delta > 100 )
+      granularity per-source
+   action bash echo "on-counters"
+!
+event-handler trigger-on-intf
+   trigger on-intf Ethernet4 operstatus ip ip6
+   action bash echo "on-intf"
+!
+event-handler trigger-on-logging
+   trigger on-logging
+      poll interval 10
+      regex ab*
+   action bash echo "on-logging"
 !
 event-handler trigger-on-maintenance1
    trigger on-maintenance enter interface Management3 after stage linkdown
@@ -39,5 +49,9 @@ event-handler trigger-on-maintenance2
 event-handler trigger-on-maintenance3
    trigger on-maintenance enter bgp 10.0.0.2 vrf vrf1 all
    action bash echo "on-maintenance"
+!
+event-handler trigger-vm-tracer
+   trigger vm-tracer vm
+   action bash echo "vm-tracer vm"
 !
 end
