--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/event_handlers.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/event_handlers.schema.yml
@@ -39,10 +39,69 @@ keys:
           description: |
             Configure event trigger condition.
           valid_values:
-          - on-boot
-          - on-logging
-          - on-startup-config
-          - on-maintenance
+          - "on-boot"
+          - "on-counters"
+          - "on-intf"
+          - "on-logging"
+          - "on-maintenance"
+          - "on-startup-config"
+          - "vm-tracer vm"
+        trigger_on_counters:
+          type: dict
+          keys:
+            condition:
+              type: str
+              description: Set the logical expression to evaluate.
+            granularity_per_source:
+              type: bool
+              description: |-
+                Set the granularity of event counting for a wildcarded condition.
+                Example -
+                  condition ( Arad*.IptCrcErrCnt.delta > 100 ) and ( Arad*.UcFifoFullDrop.delta > 100 )
+                  [* wildcard is used here]
+            poll_interval:
+              type: int
+              convert_types:
+              - str
+              min: 1
+              max: 1000000
+              description: Set the polling interval in seconds.
+        trigger_on_logging:
+          type: dict
+          keys:
+            poll_interval:
+              type: int
+              convert_types:
+              - str
+              min: 1
+              max: 1000000
+              description: Set the polling interval in seconds.
+            regex:
+              type: str
+              description: Regular expression to use for searching log messages.
+        trigger_on_intf:
+          type: dict
+          description: |-
+            Trigger condition occurs on specified interface changes.
+            Note: Any one of the `ip`, `ipv6` and `operstatus` key needs to be defined along with the `interface`.
+          keys:
+            interface:
+              type: str
+              required: True
+              description: |-
+                Interface name.
+                Example - Ethernet4
+                          Loopback4-6
+                          Port-channel4,7
+            ip:
+              type: bool
+              description: Action is triggered upon changes to interface IP address assignment.
+            ipv6:
+              type: bool
+              description: Action is triggered upon changes to interface ipv6 address assignment.
+            operstatus:
+              type: bool
+              description: Action is triggered upon changes to interface operStatus.
         trigger_on_maintenance:
           description: Settings required for trigger 'on-maintenance'.
           type: dict
@@ -87,6 +146,11 @@ keys:
               description: Name of unit. Trigger condition occurs on maintenance operation of specified unit
         regex:
           type: str
+          deprecation:
+            warning: true
+            removed: false
+            remove_in_version: 5.0.0
+            new_key: event_handlers.trigger_on_logging.regex
           description: |
             Regular expression to use for searching log messages. Required for on-logging trigger.
         asynchronous:
