Tests added for ntp_settings and documentation updated

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dns-ntp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dns-ntp.cfg
@@ -22,6 +22,8 @@ ntp authenticate servers
 ntp local-interface vrf mgt Management0
 ntp server vrf mgt 10.10.111.1 prefer
 ntp server vrf mgt 10.10.111.2
+ntp server vrf mgt 2001:db8::3
+ntp server vrf mgt 2001:db8::4
 !
 no enable password
 no aaa root
