--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7143,7 +7143,7 @@ keys:
           keys:
             name:
               type: str
-              description: IP or hostname e.g., 2.2.2.55, ie.pool.ntp.org.
+              description: IP or hostname e.g., 2.2.2.55, 2001:db8::55, ie.pool.ntp.org.
             burst:
               type: bool
             iburst:
