--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE3.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-SPINE3.cfg
@@ -20,6 +20,7 @@ ip name-server vrf MGMT 2001:db8::2
 !
 ntp local-interface vrf MGMT Management0
 ntp server vrf MGMT 192.168.200.5 prefer
+ntp server vrf MGMT 2001:db8::3
 !
 snmp-server contact example@example.com
 snmp-server location EOS_DESIGNS_UNIT_TESTS DC1-SPINE3
