--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/mgmt_interface_fabric.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/mgmt_interface_fabric.cfg
@@ -22,6 +22,7 @@ ip name-server vrf MGMT 2001:db8::2
 !
 ntp local-interface vrf MGMT MY_INTERFACE_FABRIC
 ntp server vrf MGMT 192.168.200.5 prefer
+ntp server vrf MGMT 2001:db8::3
 !
 snmp-server contact example@example.com
 snmp-server location EOS_DESIGNS_UNIT_TESTS mgmt_interface_fabric
