--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -14281,7 +14281,8 @@ keys:
                     type: str
                     required: true
                     description: The action to take - note that platform support for
-                      the redirect action is limited.
+                      the redirect action is limited. The "redirect" action also requires
+                      the 'next_hop' to be configured.
                     valid_values:
                     - forward
                     - drop
