--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -113,7 +113,7 @@ jobs:
           - 'eos_cli_config_gen_deprecated_vars'
           - 'eos_cli_config_gen_negative_unit_tests'
         ansible_version:
-          - 'ansible-core<2.17.0 --upgrade'
+          - 'ansible-core<2.18.0 --upgrade'
         # Also test minimum ansible version for one scenario.
         include:
           - avd_scenario: 'eos_cli_config_gen'
@@ -152,7 +152,7 @@ jobs:
       fail-fast: true
       matrix:
         avd_scenario: ['dhcp_configuration', 'dhcp_provisioning']
-        ansible_version: ['ansible-core<2.17.0 --upgrade']
+        ansible_version: ['ansible-core<2.18.0 --upgrade']
     needs: [ file-changes ]
     if: needs.file-changes.outputs.dhcp == 'true'
     steps:
@@ -203,7 +203,7 @@ jobs:
           - 'example-l2ls-fabric'
           - 'example-single-dc-l3ls'
         ansible_version:
-          - 'ansible-core<2.17.0 --upgrade'
+          - 'ansible-core==2.17.0rc2 --upgrade' # Testing with 2.17.0rc1 in CI <- update to "'ansible-core<2.18.0 --upgrade'" before merging PR!
         pip_requirements:
           - 'ansible_collections/arista/avd/requirements.txt'
         # Also test minimum ansible version for one scenario.
@@ -258,7 +258,7 @@ jobs:
         avd_scenario:
           - 'eos_config_deploy_cvp'
         ansible_version:
-          - 'ansible-core<2.17.0 --upgrade'
+          - 'ansible-core<2.18.0 --upgrade'
         include:
           - avd_scenario: 'eos_config_deploy_cvp'
             ansible_version: 'ansible-core==2.15.0'
@@ -298,7 +298,7 @@ jobs:
         avd_scenario:
           - 'eos_validate_state'
         ansible_version:
-          - 'ansible-core<2.17.0 --upgrade'
+          - 'ansible-core<2.18.0 --upgrade'
         include:
           - avd_scenario: 'eos_validate_state'
             ansible_version: 'ansible-core==2.15.0'
