Test: Ipv6 name servers (#3926)

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/DC1-BL1A.cfg
@@ -16,6 +16,8 @@ hostname DC1-BL1A
 ip name-server vrf MGMT 1.1.1.1
 ip name-server vrf MGMT 8.8.8.8
 ip name-server vrf MGMT 192.168.200.5
+ip name-server vrf MGMT 2001:db8::1
+ip name-server vrf MGMT 2001:db8::2
 !
 sflow vrf OOB destination 10.0.200.90
 sflow vrf OOB destination 192.168.200.10
