--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dns-ntp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dns-ntp.cfg
@@ -9,6 +9,10 @@ ip name-server 10.10.128.10
 ip name-server vrf mgmt 10.10.128.10
 ip name-server vrf TEST 10.10.128.10 priority 3
 ip name-server 10.10.129.10 priority 0
+ip name-server 2001:db8::1
+ip name-server vrf mgmt 2001:db8::1
+ip name-server 2001:db8::2 priority 0
+ip name-server vrf TEST 2001:db8::2 priority 3
 dns domain test.local
 !
 ntp authentication-key 1 md5 044F0E151B
