--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/dns-ntp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/dns-ntp.yml
@@ -21,6 +21,18 @@ ip_name_servers:
   - ip_address: 10.10.128.10
     vrf: TEST
     priority: 3
+  # no VRF
+  - ip_address: 2001:db8::1
+  # no VRF priority
+  - ip_address: 2001:db8::2
+    priority: 0
+  # Same DNS management VRF
+  - ip_address: 2001:db8::1
+    vrf: mgmt
+  # Same DNS different VRF and priority
+  - ip_address: 2001:db8::2
+    vrf: TEST
+    priority: 3
 
 ### DNS Domain ###
 dns_domain: test.local
