--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/mgmt_interface_fabric.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/mgmt_interface_fabric.cfg
@@ -17,6 +17,8 @@ service routing protocols model multi-agent
 hostname mgmt_interface_fabric
 ip name-server vrf MGMT 8.8.8.8
 ip name-server vrf MGMT 192.168.200.5
+ip name-server vrf MGMT 2001:db8::1
+ip name-server vrf MGMT 2001:db8::2
 !
 ntp local-interface vrf MGMT MY_INTERFACE_FABRIC
 ntp server vrf MGMT 192.168.200.5 prefer
