--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -131,7 +131,7 @@ nav:
   - Home: README.md
   - Getting Started:
       - Introduction to Ansible and AVD: docs/getting-started/intro-to-ansible-and-avd.md
-      - Ansible Automation Platform and AVD: docs/getting-started/avd-aap.md
+      - AVD and Ansible Automation Platform: docs/getting-started/avd-aap.md
   - Examples:
       - Single DC L3LS: examples/single-dc-l3ls/README.md
       - Dual DC L3LS: examples/dual-dc-l3ls/README.md
