--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ipv6_dhcp_relay.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ipv6_dhcp_relay.schema.yml
@@ -21,7 +21,7 @@ keys:
         keys:
           link_layer_address:
             type: bool
-            description: Add Option 79 (Link Layer Address Option), off by default.
+            description: Add Option 79 (Link Layer Address Option).
           remote_id_format:
             type: str
             valid_values: ["%m:%i", "%m:%p"]
