--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ipv6_dhcp_relay.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ipv6_dhcp_relay.schema.yml
@@ -14,7 +14,7 @@ keys:
         description: DhcpRelay Agent will be in always-on mode, off by default.
       all_subnets:
         type: bool
-        description: Allow forwarding requests with additional IPv6 addresses in the gateway address "giaddr" field, off by default.
+        description: Allow forwarding requests with additional IPv6 addresses in the gateway address "giaddr" field.
       option:
         type: dict
         description: Insert DHCP Option.
