--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ipv6_dhcp_relay.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ipv6_dhcp_relay.schema.yml
@@ -25,4 +25,4 @@ keys:
           remote_id_format:
             type: str
             valid_values: ["%m:%i", "%m:%p"]
-            description: Add RemoteID option 37 in format MAC address and interface ID (%m:%i) or MAC address and interface name (%m:%p), off by default.
+            description: Add RemoteID option 37 in format MAC address and interface ID (`%m:%i`) or MAC address and interface name (`%m:%p`).
