--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ip_dhcp_relay.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ip_dhcp_relay.schema.yml
@@ -14,7 +14,7 @@ keys:
         description: DhcpRelay Agent will be in always-on mode.
       all_subnets:
         type: bool
-        description: Allow forwarding requests with secondary IP addresses in the gateway address "giaddr" field, off by default.
+        description: Allow forwarding requests with secondary IP addresses in the gateway address "giaddr" field.
       information_option:
         type: bool
         description: Insert Option-82 information.
