--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/management_security.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/management_security.schema.yml
@@ -110,7 +110,7 @@ keys:
             tls_versions:
               type: str
               description: |
-                List of allowed TLS versions as string
+                List of allowed TLS versions as string.
                 Examples:
                   - "1.0"
                   - "1.0 1.1"
@@ -120,14 +120,14 @@ keys:
               type: str
               description: |
                 cipher_list syntax follows the openssl cipher strings format.
-                Colon (:) separated list of allowed ciphers as a string
+                Colon (:) separated list of allowed ciphers as a string.
             trust_certificate:
               type: dict
               keys:
                 certificates:
                   type: list
                   description: |
-                    List of trust certificate names
+                    List of trust certificate names.
                     Examples:
                       - test1.crt
                       - test2.crt
@@ -154,7 +154,7 @@ keys:
                 certificates:
                   type: list
                   description: |
-                    List of chain certificate names
+                    List of chain certificate names.
                     Examples:
                       - chain1.crt
                       - chain2.crt
