--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -385,9 +385,9 @@ keys:
             shared_secret:
               type: dict
               keys:
-                shared_secret_profile_name:
+                profile:
                   type: str
-                  description: To apply the profile name, it must be created under "management-security".
+                  description: Name of profile defined under `management_security`.
                 hash_algorithm:
                   type: str
                   valid_values:
@@ -585,7 +585,7 @@ keys:
             shared_secret:
               type: dict
               keys:
-                shared_secret_profile_name:
+                profile:
                   type: str
                   description: To apply a profile, it must be created under "management-security".
                 hash_algorithm:
