--- a/ansible_collections/arista/avd/requirements-dev.txt
+++ b/ansible_collections/arista/avd/requirements-dev.txt
@@ -15,7 +15,8 @@ yamllint
 treelib>=1.5.5
 md-toc>=7.1.0
 natsort
-jsonschema>=4.5.1,<4.18
+jsonschema>=4.5.1
+referencing>=0.35.0
 deepmerge>=1.1.0
 isort==5.13.2
 black==24.4.2
