--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/_defaults.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/_defaults.schema.yml
@@ -5,5 +5,6 @@
 # Line above is used by RedHat's YAML Schema vscode extension
 # Use Ctrl + Space to get suggestions for every field. Autocomplete will pop up after typing 2 letters.
 $id: eos_cli_config_gen
+$schema: avd_meta_schema
 type: dict
 allow_other_keys: true
