--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_network_services.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_network_services.schema.yml
@@ -711,7 +711,7 @@ $defs:
                       description: Custom structured config added under ethernet_interfaces.[name=<interface>] for eos_cli_config_gen.
                       documentation_options:
                         hide_keys: true
-                      $ref: "eos_cli_config_gen#/keys/ethernet_interfaces/items/"
+                      $ref: "eos_cli_config_gen#/keys/ethernet_interfaces/items"
                     raw_eos_cli:
                       type: str
                       description: |
@@ -977,7 +977,7 @@ $defs:
                     description: Custom structured config added under router_bgp.vrfs.[name=<vrf>] for eos_cli_config_gen.
                     documentation_options:
                       hide_keys: true
-                    $ref: "eos_cli_config_gen#/keys/router_bgp/keys/vrfs/items/"
+                    $ref: "eos_cli_config_gen#/keys/router_bgp/keys/vrfs/items"
               bgp_peer_groups:
                 documentation_options:
                   table: network-services-vrfs-bgp-settings
@@ -1031,7 +1031,7 @@ $defs:
                 description: Custom structured config for eos_cli_config_gen.
                 documentation_options:
                   hide_keys: true
-                $ref: "eos_cli_config_gen#/"
+                $ref: "eos_cli_config_gen#"
         l2vlans:
           documentation_options:
             table: network-services-l2vlans-settings
@@ -1172,7 +1172,7 @@ $defs:
                       This configuration will not be applied to vlan aware bundles.
                     documentation_options:
                       hide_keys: true
-                    $ref: "eos_cli_config_gen#/keys/router_bgp/keys/vlans/items/"
+                    $ref: "eos_cli_config_gen#/keys/router_bgp/keys/vlans/items"
                   raw_eos_cli:
                     type: str
                     description: |
