--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vlan_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/vlan_interfaces.schema.yml
@@ -419,7 +419,7 @@ keys:
           description: ISIS instance name.
         isis_bfd:
           type: bool
-          description: Enable BFD.
+          description: Enable BFD for ISIS.
         isis_passive:
           type: bool
         isis_metric:
