fix tox dependencies

--- a/python-avd/tox.ini
+++ b/python-avd/tox.ini
@@ -20,6 +20,7 @@ deps =
     pytest
     PyYAML>=6.0.0
     pydantic>=2.3.0
+    referencing>=0.35.0
 extras = mdtoc
 commands =
     make test-dep
@@ -33,6 +34,7 @@ deps =
     PyYAML>=6.0.0
     pydantic>=2.3.0
     coverage[toml]
+    referencing>=0.35.0
 commands =
     coverage erase
     # posargs allows to run only a specific test using
