Changed table headings in documentation.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3791,6 +3791,7 @@ keys:
               description: Key of the global tag pair.
             value:
               type: str
+              required: true
               description: Value of the global tag pair.
   interface_defaults:
     type: dict
