--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/influxdb.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/influxdb.schema.yml
@@ -70,4 +70,5 @@ keys:
               description: Key of the global tag pair.
             value:
               type: str
+              required: true
               description: Value of the global tag pair.
