--- a/.github/workflows/pull-request-comment.yml
+++ b/.github/workflows/pull-request-comment.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           script: |
             github.rest.issues.createComment({
-              issue_number: context.pull_request.number,
+              issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: $BODY
